# visa-scraping

./: .gitignore  PyEnv.bat  PyRun.bat  README.md  setup.cfg  setup.py  versioneer.py
.github/workflows/: run_ejecution.yml
automation/: run_ejecution.yml
src/: ejecution.py
src/static/: config.json
src/visa_scraping/: _version.py  ejecution.py
src/visa_scraping/static/: config.json
