[versioneer]
VCS = git
style = pep440
versionfile_source = src\visa_scraping\_version.py
versionfile_build = visa_scraping\_version.py
tag_prefix = ''

[metadata]
name = visa_scraping
author = mateopereze
author_email = mateo.pereze4@gmail.com
description = Este proyecto se centra en la recolección automatizada de información a través de técnicas de web scraping

[options]
package_dir = 
    = src
packages = find_namespace:
python_requires = >=3.7.0, <3.12.0
include_package_data = True
install_requires = 
    openpyxl>=3.1.2
    pandas>=2.2.3
    beautifulsoup4>=4.12.3
    selenium>=4.25.0
